tests/baselines/reference/MemberFunctionDeclaration5_es6.errors.txt
MemberFunctionDeclaration5_es6.ts(2,5): error TS7010: '(Missing)', which lacks return-type annotation, implicitly has an 'any' return type.
MemberFunctionDeclaration5_es6.ts(3,1): error TS1003: Identifier expected.


==== MemberFunctionDeclaration5_es6.ts (2 errors) ====
    class C {
       *
        
!!! error TS7010: '(Missing)', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    ~
!!! error TS1003: Identifier expected.